# AOC2024

./: .gitignore  Cargo.toml  image_gen.py
src/: grid.rs  lib.rs
