[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"
itertools = "0.13.0"
regex = "1.11.1"
rustc-hash = "2.1.0"

# Dependencies for input puller
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["full"] }
